<resources>
    <string name="app_name">Pilot Logbook</string>
    <string name="service_file_download_success">Загрузка файла завершена</string>
    <string name="service_file_upload_success">Выгрузка файла завершена</string>
    <string name="service_operation_success">Операция завершена</string>
    <string name="service_operation_fail">Операция не завершена</string>
    <string name="service_import_fail">Импорт не завершен</string>
    <string name="service_sync_fail">Синхронизация не завершена</string>
    <string name="service_download_fail">Загрузка файла не завершена</string>
    <string name="service_upload_fail">Выгрузка файла не завершена</string>
    <string name="service_export_fail">Экспорт не завершен</string>
    <string name="str_export_success">Экспорт завершен</string>
    <string name="str_import_success">Импорт завершен</string>
    <string name="str_date">Дата</string>
    <string name="str_itemlogtime">Налет</string>
    <string name="str_itemlogtime_hint">чч:мм</string>
    <string name="str_aircraft_type">Тип ВС</string>
    <string name="str_aircraft_name">Название ВС</string>
    <string name="str_aircraft_reg_no">Рег.№ ВС</string>
    <string name="str_regnum">Рег.№</string>
    <string name="str_regnum_formatted">Рег.№:\u00A0%s</string>
    <string name="str_day_night">День/Ночь</string>
    <string name="str_vfr_ifr">визуально/по приборам</string>
    <string name="str_ifr">по приборам</string>
    <string name="str_vfr">визуально</string>
    <string name="str_flight_type">круги/зона/маршрут</string>
    <string name="str_desc">Описание</string>
    <string name="cell_night_time">Ночное время</string>
    <string name="cell_ground_time">Время на земле</string>
    <string name="str_total_time">Общее время:</string>
    <string name="str_total_item_flight_time">Летное время:</string>
    <string name="total_records">Всего записей:</string>
    <string name="str_add_flight">Добавить полет</string>
    <string name="str_edt_flight">Редактирование полета</string>
    <string name="str_delete">Удалить</string>
    <string name="str_clearall">Очистить все?</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Отмена</string>
    <string name="str_date_format">dd.MM.yyyy</string>
    <string name="str_time_zero">00:00</string>
    <string name="str_time_add_main">+общее</string>
    <string name="custom_field_name_default" translatable="false">(default)</string>
    <string name="str_about">О программе</string>
    <string name="str_no_regnum">Нет рег.№</string>
    <string name="str_type_change_succesfull">Тип ВС изменен</string>
    <string name="str_type_change_fail">Тип ВС не изменен</string>
    <string name="str_type_remove_succesfull">Тип ВС удален</string>
    <string name="str_types_removes_succesfull">Типы ВС удалены</string>
    <string name="str_type_remove_fail">Тип ВС не удален</string>
    <string name="str_types_removes_fail">Типы ВС не удалены</string>
    <string name="str_type_add_succesfull">Тип ВС добавлен</string>
    <string name="str_type_add_fail">Тип ВС не добавлен</string>
    <string name="str_type">Воздушное судно</string>
    <string name="str_flight_type_title">Тип полета</string>
    <string name="str_flight_title">Название полета</string>
    <string name="str_type_empty">Тип ВС: нет</string>
    <string name="str_add_airplane_types">Добавить тип ВС</string>
    <string name="str_edt_airplane_types">Редактировать тип ВС</string>
    <string name="str_remove_airplane_types">Удалить тип ВС</string>
    <string name="str_airplane_types">Типы ВС</string>
    <string name="choose_airplne_type">Выбрать ВС</string>
    <string name="str_import_excel">Импорт XLS</string>
    <string name="str_import_from_file">Импорт из файловой системы</string>
    <string name="str_export_excel">Экспорт XLS</string>
    <string name="str_open_file">Открыть XLS</string>
    <string name="str_import_attention">Предупреждение!</string>
    <string name="str_import_massage">При импорте данных из файла база данных будет заменена.</string>
    <string name="str_import_local_file_or_disk">Хотите импортировать стандартный файл или выбрать другой?</string>
    <string name="str_choose_default_file">Выберите какой файл хотите импортировать</string>
    <string name="str_import_local_file">Стандартный файл</string>
    <string name="str_import_file_from_disk">Выбрать</string>
    <string name="str_export_attention">Экспорт в файл?</string>
    <string name="str_export_confirm_description">Можно экспортировать XLS файл или json.При экспорте json будут полные данные.</string>
    <string name="str_export_confirm_xls">XLS</string>
    <string name="str_export_confirm_json">JSON</string>
    <string name="str_share_confirm_title">Выберите файл для шаринга</string>
    <string name="str_settings">Настройки</string>
    <string name="str_moto">Cчетчик моточасов</string>
    <string name="str_moto_btn">Моточасы</string>
    <string name="str_motostart">Начальное показание</string>
    <string name="str_motofinish">Конечное показание</string>
    <string name="str_motoresult">Результат</string>
    <string name="str_extend_options">Дополнительные опции</string>
    <string name="str_xls">Настройки XLS</string>
    <string name="str_alarm_add_airplane_type">Введите тип ВС</string>
    <string name="str_remove_all">Удалить все</string>
    <string name="str_error_import">Ошибка импорта</string>
    <string name="str_no_types">Нет типов ВС</string>
    <string name="no_type">Нет типа</string>
    <string name="str_storage_permission_denied">Доступ к памяти запрещен</string>
    <string name="str_fitre_stat">Фильтр статистики</string>
    <string name="plane_main_type_airplane">Самолёт</string>
    <string name="plane_main_type_helicoper">Вертолёт</string>
    <string name="plane_main_type_glider">Планер</string>
    <string name="plane_main_type_autogyro">Автожир</string>
    <string name="plane_main_type_aerostat">Воздушный шар</string>
    <string name="plane_main_type_airship">Дирижабль</string>
    <string name="payment_permission_denied_title">Внимание</string>
    <string name="payment_permission_denied_read_external_storage">Для этой операции вам необходимо предоставить разрешение на чтение хранилища данных телефона.</string>
    <string-array name="daynight">
        <item>день</item>
        <item>ночь</item>
    </string-array>
    <string-array name="statistic_time_period">
        <item>@string/all_records</item>
        <item>@string/period_day</item>
        <item>@string/period_month</item>
        <item>@string/period_year</item>
        <item>@string/period_custom</item>
    </string-array>
    <string-array name="statistic_filter_type">
        <item>@string/str_aircraft_name</item>
        <item>@string/str_aircraft_reg_no</item>
        <item>@string/str_aircraft_type</item>
        <item>@string/stat_flight_type</item>
        <item>@string/stat_color</item>
    </string-array>
    <string-array name="plane_main_types">
        <item>@string/plane_main_type_airplane</item>
        <item>@string/plane_main_type_helicoper</item>
        <item>@string/plane_main_type_glider</item>
        <item>@string/plane_main_type_autogyro</item>
        <item>@string/plane_main_type_aerostat</item>
        <item>@string/plane_main_type_airship</item>
    </string-array>
    <string-array name="ifrvfr">
        <item>VFR</item>
        <item>IFR</item>
    </string-array>
    <string-array name="flighttype">
        <item>@string/flight_type_circle</item>
        <item>@string/flight_type_zone</item>
        <item>@string/flight_type_route</item>
    </string-array>
    <string-array name="flights_filers">
        <item>@string/str_date_asc</item>
        <item>@string/str_date_desc</item>
        <item>@string/str_logtime_asc</item>
        <item>@string/str_logtime_desc</item>
    </string-array>
    <string-array name="flights_edit_items">
        <item>@string/str_edt_flight</item>
        <item>@string/str_delete</item>
        <item>@string/str_clearall</item>
    </string-array>
    <string name="fragment_logbook">Список полетов</string>
    <string name="fragment_plane_types">Типы ВС</string>
    <string name="fragment_flight_types">Типы полетов</string>
    <string name="fragment_stats">Статистика</string>
    <string name="str_sort_by">Сортировка по</string>
    <string name="stat_column_month">Месяц</string>
    <string name="stat_column_cnt">Кол-во</string>
    <string name="stat_column_time">Время</string>
    <string name="stat_column_day_night">День\nНочь</string>
    <string name="stat_column_day_vfr_ifr">VFR\nIFR</string>
    <string name="stat_column_day_czm">Круг\nЗона\nМаршрут</string>
    <string name="stat_error_end_less_start">Конечная дата меньше начальной</string>
    <string name="press_back_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="auto_export_xls_title">Автоэкспорт XLS</string>
    <string name="auto_export_xls_description">При сохранении полета файл XLS будет сохранён автоматически\n(Поддержка XLS осуществляться не будет)</string>
    <string name="str_date_desc">Дата по убыванию</string>
    <string name="str_date_asc">Дата по возрастанию</string>
    <string name="str_logtime_desc">Налет по убыванию</string>
    <string name="str_logtime_asc">Налет по возрастанию</string>
    <string name="warning">Предупреждение</string>
    <string name="item_updated">Запись обновлена</string>
    <string name="loading_totals">Обновление данных…</string>
    <string name="record_not_found">Запись не найдена</string>
    <string name="choose_action">Выберите действие</string>
    <string name="aircraft_type_not_correct">Название типа некорректно</string>
    <string name="save">Сохранить</string>
    <string name="remove">Удалить</string>
    <string name="str_time_add_to_flight_time">Включить в налет</string>
    <string name="str_time_remove_from_flight_time">Убрать из налета</string>
    <string name="add_time">Добавить время</string>
    <string name="empty_list">Список пуст</string>
    <string name="str_edt_flight_type">Название типа полета</string>
    <string name="confirm_delete_flight_type">Удалить тип полета?</string>
    <string name="str_select">Выбрать</string>
    <string name="flights_not_removed">Записи не удалены</string>
    <string name="enter_time">Введите время</string>
    <string name="pref_auto_export_xls_key" translatable="false">autoExportXLSPref</string>
    <string name="pref_save_last_flight_data_key" translatable="false">PREF_SAVE_LAST_FLIGHT_DATA</string>
    <string name="backups_settings_open_key" translatable="false">openBackupSettings</string>
    <string name="import_export_settings">Настройки импорта/экспорта</string>
    <string name="import_from_file">Загрузить из файла</string>
    <string name="export_to_file">Выгрузить в файл</string>
    <string name="airports">Аэродромы</string>
    <string name="icao_code">Код ICAO</string>
    <string name="iata_code">Код IATA</string>
    <string name="airport_name_rus">Название аэродрома(рус.)</string>
    <string name="airport_name_eng">Название аэродрома(англ.)</string>
    <string name="city_name_rus">Город(рус.)</string>
    <string name="city_name_eng">Город(англ.)</string>
    <string name="country_rus">Страна(рус.)</string>
    <string name="country_eng">Страна(англ.)</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="elevation">Высота</string>
    <string name="save_last_flight_data_description">Сохранять последние данные полета</string>
    <string name="custom_fields">Дополнительные поля</string>
    <string name="save_last_flight_data_title">Сохранять последние данные</string>
    <string name="common_settings">Общие настройки</string>
    <string name="backups_settings">Настройки бэкапов</string>
    <string name="backups_settings_open">Открыть настройки бэкапов</string>
</resources>