<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <item
            android:id="@+id/action_settings"
            app:showAsAction="never"
            android:title="@string/str_settings"/>
    <item android:id="@+id/action_about"
          app:showAsAction="never"
          android:title="@string/str_about"/>
    <item android:id="@+id/action_type_edit"
          app:showAsAction="never"
          android:title="@string/str_airplane_types"/>
    <item
		    app:showAsAction="never"
            android:title="@string/str_xls">
        <menu>
            <item android:id="@+id/action_import_excel"
                  android:title="@string/str_import_excel">
            </item>
            <item android:id="@+id/action_export_excel"
                  android:title="@string/str_export_excel">
            </item>
            <item android:id="@+id/action_open_file"
                  android:title="@string/str_open_file">
            </item>
            <item android:id="@+id/action_import_from_file"
                  android:title="@string/str_import_from_file">
            </item>
        </menu>
    </item>

</menu>
