<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_xls"
        android:showAsAction="never"
        android:title="@string/str_xls">
        <menu>
            <item android:id="@+id/action_import_excel"
                android:title="@string/str_import_excel">
            </item>
            <item android:id="@+id/action_export_excel"
                android:title="@string/str_export_excel">
            </item>
            <item android:id="@+id/action_open_file"
                android:title="@string/str_open_file">
            </item>
            <item android:id="@+id/action_import_from_file"
                android:title="@string/str_import_from_file">
            </item>
        </menu>
    </item>
</menu>