<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/str_totaltime"
            android:textColor="#f3fdf8"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/lvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTotalTime"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="2dp"
                android:text="@string/str_date"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/str_itemlogtime"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/str_type"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="left"
                android:padding="2dp"
                android:text="@string/str_regnum"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lvHeader" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_marginBottom="5dp"
            app:elevation="6dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>